[package]
name = "cherenkov"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
wfc = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
grid_2d = { version = "0.12", features = ["serialize"] }
coord_2d = { version = "0.2", features = ["serialize"] }
direction = { version = "0.17", features = ["serialize"] }
shadowcast = { version = "0.5", features = ["serialize"] }
rgb24 = { version = "0.1", features = ["serialize"] }
hashbrown = { version = "0.1", features = ["serde"] }
