[package]
name = "cherenkov_glutin"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
edition = "2018"

[dependencies]
prototty_glutin = { version = "0.25", features = ["storage"] }
cherenkov_prototty = { path = "../prototty" }
cherenkov_native = { path = "../native" }
simon = "0.2"
