[package]
name = "cherenkov_wasm"
version = "0.1.2"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
prototty_wasm = { version = "0.23", features = ["storage"] }
cherenkov_prototty = { path = "../prototty", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
