[package]
name = "gws_wasm"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
prototty_wasm = { version = "0.25", features = ["storage"] }
gws_prototty = { path = "../prototty", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
